<resources>
    <string name="app_name">KeepEye</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="google_maps_key">AIzaSyBRrLt6z09GuTeJQ19Hskh3VRRxlk9wnWY</string>
    <string name="pref_file">com.example.pref_file</string>
    <string name="pref_name">com.example.pref_name</string>
    <string name="pref_username">com.example.pref_username</string>
    <string name="pref_journey_status">com.example.pref_journey_status</string>
    <string name="pref_type">com.example.pref_type</string>
    <string name="pref_login_status">com.example.pref_login_status</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Let\'s join us and \nBuild your relationship with others</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">KeepEye</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_dissociate">Dissociate</string>
    <string name="menu_home">Home</string>
    <string name="menu_ejBtn">End Journey</string>
    <string name="menu_associate">Associate</string>
    <string name="menu_logout">Log Out</string>
    <string name="menu_monitor">Monitor</string>
    <string name="menu_start_journey">Start Journey</string>
    <string name="home_second">Home Second</string>
    <string name="title_activity_maps">Map</string>
    menu_ejBtn
    <string name="title_activity_start_journey">Map1</string>
    <string name="title_activity_speed_analysis">SpeedAnalysis</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>