<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_dialog_dialer"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_associate"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/menu_associate" />
        <item
            android:id="@+id/nav_dissociate"
            android:icon="@android:drawable/ic_delete"
            android:title="@string/menu_dissociate" />
        <item
            android:id="@+id/nav_monitor"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/menu_monitor" />
        <item
            android:id="@+id/nav_start_journey"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/menu_start_journey" />
        <item
            android:id="@+id/nav_end_journey"
            android:title="@string/menu_ejBtn" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@android:drawable/ic_media_rew"
            android:title="@string/menu_logout" />
    </group>
</menu>
